feat: progress bab 2

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -23,13 +23,13 @@
 \begin{document}
 
 %Basic configuration
-\title{\textit{Automatic Scaling} dengan Kontrol Fleksibel Berdasarkan Model Prediktif Berbasis \textit{Time Series} untuk Efisiensi Sumber Daya Kubernetes pada Pods \textit{Elastic Search}}
+\title{\textit{Contoh} Judul TA}
 \date{}
 \author{
-    Steven Nataniel Kodyat \\
-    NIM: 13519002
+    Muhammad Garebaldhie ER Rahman \\
+    NIM: 13520029
 }
-\newcommand\tanggalpengesahan{31 Juli 2023}
+\newcommand\tanggalpengesahan{7 November 2023}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
@@ -53,6 +53,7 @@
 \renewcommand{\listtablename}{DAFTAR TABEL}
 \renewcommand{\bibname}{DAFTAR PUSTAKA}
 
+% daftar isi, lampiran, gambar, table
 \tableofcontents
 \listofappendices
 \listoffigures
@@ -78,9 +79,9 @@
 \input{chapters/chapter-1}
 \input{chapters/chapter-2}
 % \blankpage
-\input{chapters/chapter-3}
-\input{chapters/chapter-4}
-\input{chapters/chapter-5}
+% \input{chapters/chapter-3}
+% \input{chapters/chapter-4}
+% \input{chapters/chapter-5}
 %---------------------------------------------------------------%
 
 % Daftar pustaka
@@ -93,6 +94,6 @@
 % Setting judul anak lampiran
 \titleformat*{\section}{\bfseries}
 
-\input{chapters/appendix/appendix}
+% \input{chapters/appendix/appendix}
 
 \end{document}
