--- a/src/yudisium.tex
+++ b/src/yudisium.tex
@@ -26,10 +26,10 @@
 \title{\textit{Automatic Scaling} dengan Kontrol Fleksibel Berdasarkan Model Prediktif Berbasis \textit{Time Series} untuk Efisiensi Sumber Daya Kubernetes pada Pods \textit{Elastic Search}}
 \date{}
 \author{
-    Steven Nataniel Kodyat \\
-    NIM: 13519002
+    Muhammad Garebaldhie ER Rahman \\
+    NIM: 13520029
 }
-\newcommand\tanggalpengesahan{31 Juli 2023}
+\newcommand\tanggalpengesahan{7 November 2023}
 
 % \pagenumbering{roman}
 \pagenumbering{gobble}
