--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -40,6 +40,7 @@
 	di-nya-ta-kan
 	de-fi-ni-si
 	di-bu-tuh-kan
+  di-gu-na-kan
 
 	% E
 	%
@@ -61,6 +62,7 @@
 	% I
 	% 
 	i-nduk
+  in-for-ma-si
 
 	% J
 	%
@@ -69,6 +71,8 @@
 
 	% K
 	%
+  kom-po-si-si
+
 
 	% L
 	%
@@ -84,6 +88,7 @@
 
 	% P
 	%
+  pro-vi-der
 
 	% Q
 	%
@@ -92,6 +97,7 @@
 	%
 
 	% S
+  se-la-in
 	%
 
 	% T
