--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -23,16 +23,18 @@
 	a-na-li-sa
 	a-pli-ka-si
 	a-lo-ka-si
+  an-ta-ra
 
 	% B
 	%
 	be-be-ra-pa
 	ber-ge-rak
+  be-ri-kut
+  ber-ko-mu-ni-ka-si
 
 	% C
 	%
 	ca-ri
-	con-tainer-iza-tion
 
 	% D
 	%
@@ -41,6 +43,8 @@
 	de-fi-ni-si
 	di-bu-tuh-kan
   di-gu-na-kan
+  di-tam-bah-kan-nya
+  di-tem-pat-kan
 
 	% E
 	%
@@ -63,6 +67,7 @@
 	% 
 	i-nduk
   in-for-ma-si
+  im-ple-men-tasi
 
 	% J
 	%
@@ -79,6 +84,11 @@
 
 	% M
 	%
+  me-ngu-ra-ngi
+  meng-eva-lu-a-si
+  me-nge-lo-la
+  men-da-lam
+  mak-si-mal
 
 	% N
 	%
