feat: bab1 complete

--- a/src/config/if-itb-thesis.sty
+++ b/src/config/if-itb-thesis.sty
@@ -27,6 +27,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage{titling}
+\usepackage{booktabs}
+\usepackage{tabularx}
 \usepackage{blindtext}
 \usepackage{sectsty}
 \usepackage{chngcntr}
