--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -23,7 +23,7 @@
 \begin{document}
 
 %Basic configuration
-\title{\textit{Contoh} Judul TA}
+\title{Meningkatkan Performa \textit{Service Mesh} dengan memanfaatkan eBPF}
 \date{}
 \author{
     Muhammad Garebaldhie ER Rahman \\
