feat: revisi bab 1.1-1.4

--- a/src/references.bib
+++ b/src/references.bib
@@ -1,41 +1,9 @@
-@book{distributedsystem,
-  title     = {Distributed Systems Concepts And Design},
-  author    = {G. Coulouris and J. Dollimore and T. Kindberg and G. Blair},
-  edition   = {5},
-  isbn      = {9780132143011},
-  series    = {Distributed Systems Concepts And Design},
-  year      = {2012},
-  publisher = {Addison-Wesley}
-}
-
-@inproceedings{captheorem,
-  author = {E. Brewer},
-  title  = {CAP twelve years later: How the "rules" have changed},
-  year   = {2012},
-  pages  = {1-7},
-  doi    = {10.1109/mc.2012.37}
-}
-
-@online{containers,
+@online{googlecontainers,
   title   = {Containers},
   author  = {Google Cloud},
   year    = {2022},
   url     = {https://cloud.google.com/containers},
   urldate = {2022-10-22}
-}
-
-@book{inforetrieval,
-  title  = {Introduction to Information Retrieval},
-  author = {C. D Manning and P. Raghavan and H. Schutze},
-  year   = {2008}
-}
-
-@online{vpa,
-  title   = {Vertical Pod Autoscaler},
-  author  = {Kubernetes},
-  year    = {2022},
-  url     = {https://github.com/kubernetes/autoscaler/tree/master/vertical-pod-autoscaler},
-  urldate = {2022-12-05}
 }
 
 @online{vpa2,
@@ -61,52 +29,13 @@
   url     = {https://kubernetes.io/docs/concepts/workloads/pods/},
   urldate = {2022-12-21}
 }
+
 @online{clientlibrary,
   title   = {Kubernetes Client Library},
   author  = {Kubernetes},
   year    = {2022},
   url     = {https://kubernetes.io/docs/reference/using-api/client-libraries/},
   urldate = {2022-12-21}
-}
-
-@online{elasticsearch,
-  title   = {Elastic Search},
-  author  = {AWS},
-  year    = {2022},
-  url     = {https://aws.amazon.com/id/what-is/elasticsearch},
-  urldate = {2022-12-15}
-}
-
-@inproceedings{jvm,
-  author    = {M. Dev and R. Kapoor and B. Balamurugan},
-  publisher = {IEEE},
-  title     = {Study of Characteristics of Large Data Collections to Build a High Performance System},
-  year      = {2016},
-  doi       = {10.1109/ICACCCT.2016.7831707}
-}
-
-@online{apachelucene,
-  title   = {Apache Lucene},
-  author  = {Apache},
-  year    = {2022},
-  url     = {https://lucene.apache.org/core/},
-  urldate = {2022-12-17}
-}
-
-@online{elasticsearchorigin,
-  title   = {Elastic Search},
-  author  = {Elasticsearch},
-  year    = {2022},
-  url     = {https://www.elastic.co/elasticsearch/},
-  urldate = {2022-12-21}
-}
-
-@book{java12,
-  title     = {Learn Java 12 Programming},
-  author    = {Nick Samoylov},
-  isbn      = {9781789957051},
-  year      = {2019},
-  publisher = {Packt Publishing}
 }
 
 @book{database,
@@ -116,37 +45,6 @@
   edition   = {7},
   publisher = {McGraw-Hill},
   year      = {2020}
-}
-
-@book{ml,
-  title     = {Machine Learning},
-  author    = {Tom Mitchell},
-  publisher = {New York: McGraw Hill},
-  year      = {1997}
-}
-
-@book{reinforcementlearning,
-  title     = {Reinforcement Learning and Dynamic Programming Using Function Approximators},
-  author    = {Lucian Busoniu and Robert Babuska and Bart De Schutter and Damien Ernst},
-  publisher = {CRC Press},
-  year      = {2010},
-  isbn      = {9781439821084}
-}
-
-@online{invertedindex,
-  title   = {Inverted Index},
-  author  = {Paul E. Black},
-  year    = {2023},
-  url     = {https://xlinux.nist.gov/dads/HTML/invertedIndex.html},
-  urldate = {2023-02-20}
-}
-
-@article{invertedindex2,
-  title   = {Inverted Files for Text Search Engines},
-  author  = {Justin Zobel and Alistair Moffat},
-  journal = {ACM Computing Surveys},
-  volume  = {38(2)},
-  year    = {2006}
 }
 
 @inproceedings{predictiveva,
@@ -244,45 +142,6 @@
   urldate = {2023-07-10}
 }
 
-@inproceedings{rpps,
-  author       = {Fang Wei and Lu ZhiHui and Wu Jie and Cao ZhenYin},
-  title        = {RPPS: A Novel Resource Prediction and Provisioning Scheme in Cloud Data Center},
-  year         = {2012},
-  doi          = {10.1109/SCC.2012.47},
-  organization = {IEEE}
-}
-
-@article{workloadprediction,
-  author  = {Calheiros, Rodrigo N. and Masoumi, Enayat and Ranjan, Rajiv and Buyya, Rajkumar},
-  journal = {IEEE Transactions on Cloud Computing},
-  title   = {Workload Prediction Using ARIMA Model and Its Impact on Cloud Applications QoS},
-  year    = {2015},
-  volume  = {3},
-  number  = {4},
-  doi     = {10.1109/TCC.2014.2350475}
-}
-
-@inproceedings{resourceelasticity,
-  author = {Ciptaningtyas, Henning Titi and Santoso, Bagus Jati and Razi, Muhammad Fahrur},
-  title  = {Resource Elasticity Controller for Docker-based Web Applications},
-  year   = {2017},
-  doi    = {10.1109/ICTS.2017.8265669}
-}
-
-@inproceedings{tspwithga,
-  author = {Valter Rogerio Messias and Julio Cezar Estrella and Ricardo Ehlers and Marcos Jose Santana and Regina Carlucci Santana and Stephan Reiff-Marganiec},
-  title  = {Combining Time Series Prediction Models using Genetic Algorithm to Autoscaling Web Applications Hosted in the Cloud Infrastructure},
-  year   = {2015},
-  doi    = {10.1007/s00521-015-2133-3}
-}
-
-@inproceedings{predictcloudrsrc,
-  author = {Bankole, Akindele A. and Ajila, Samuel A.},
-  title  = {Predicting Cloud Resource Provisioning using Machine Learning Techniques},
-  year   = {2013},
-  doi    = {10.1109/CCECE.2013.6567848}
-}
-
 @inproceedings{asmicrocosteff,
   author = {Prachitmutita, Issaret and Aittinonmongkol, Wachirawit and Pojjanasuksakul, Nasoret and Supattatham, Montri and Padungweang, Praisan},
   title  = {Auto-scaling Microservices on IaaS under SLA with Cost-Effective Framework},
@@ -354,3 +213,12 @@
   booktitle = {Proceedings of the 7th International Conference on Properties and Applications of Dielectric Materials (Cat. No.03CH37417)},
   doi       = {10.1109/wise.2003.1254461},
 }
+@inproceedings{multicloudiot,
+  author={Gattobigio, Luca and Thielemans, Steffen and Benedetti, Priscilla and Reali, Gianluca and Braeken, An and Steenhaut, Kris},
+  booktitle={IECON 2022 – 48th Annual Conference of the IEEE Industrial Electronics Society}, 
+  title={A multi-cloud service mesh approach applied to Internet of Things}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={1-6},
+  doi={10.1109/IECON49645.2022.9968384}}
