--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -23,13 +23,18 @@
 \begin{document}
 
 %Basic configuration
-\title{Meningkatkan Performa \textit{Service Mesh} dengan memanfaatkan eBPF}
+% "IoT-Enhanced Smart Home Networks Using Service Mesh Architecture"
+% "Integrating Service Mesh in Smart Home IoT Systems"
+
+\title{Integrasi \textit{Service Mesh} dengan \textit{Smart Home IoT Systems}}
+% \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
+% \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
 \date{}
 \author{
     Muhammad Garebaldhie ER Rahman \\
     NIM: 13520029
 }
-\newcommand\tanggalpengesahan{7 November 2023}
+\newcommand\tanggalpengesahan{2 Desember 2023}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
