--- a/src/yudisium.tex
+++ b/src/yudisium.tex
@@ -29,7 +29,7 @@
     Muhammad Garebaldhie ER Rahman \\
     NIM: 13520029
 }
-\newcommand\tanggalpengesahan{7 November 2023}
+\newcommand\tanggalpengesahan{2 Desember 2023}
 
 % \pagenumbering{roman}
 \pagenumbering{gobble}
