--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -18,116 +18,117 @@
 %--------------------------------------------------------------------%
 
 \hypenation {
-	% A
-	%
-	a-na-li-sa
-	a-pli-ka-si
-	a-lo-ka-si
+  % A
+  %
+  a-na-li-sa
+  a-pli-ka-si
+  a-lo-ka-si
   an-ta-ra
-
-	% B
-	%
-	be-be-ra-pa
-	ber-ge-rak
+  
+  % B
+  %
+  be-be-ra-pa
+  ber-ge-rak
   be-ri-kut
   ber-ko-mu-ni-ka-si
-
-	% C
-	%
-	ca-ri
-
-	% D
-	%
-	da-e-rah
-	di-nya-ta-kan
-	de-fi-ni-si
-	di-bu-tuh-kan
+  
+  % C
+  %
+  ca-ri
+  
+  % D
+  %
+  da-e-rah
+  di-nya-ta-kan
+  de-fi-ni-si
+  di-bu-tuh-kan
   di-gu-na-kan
   di-tam-bah-kan-nya
   di-tem-pat-kan
-
-	% E
-	%
-	e-ner-gi
-	eks-klu-sif
-
-	% F
-	%
-	fa-si-li-tas
-
-	% G
-	%
-	ga-bung-an
-
-	% H
-	%
-	ha-lang-an
-
-	% I
-	% 
-	i-nduk
+  
+  % E
+  %
+  e-ner-gi
+  eks-klu-sif
+  
+  % F
+  %
+  fa-si-li-tas
+  
+  % G
+  %
+  ga-bung-an
+  
+  % H
+  %
+  ha-lang-an
+  
+  % I
+  % 
+  i-nduk
   in-for-ma-si
   im-ple-men-tasi
-
-	% J
-	%
-	ka-me-ra
-	kua-li-tas
-
-	% K
-	%
+  
+  % J
+  %
+  ka-me-ra
+  kua-li-tas
+  
+  % K
+  %
   kom-po-si-si
-
-
-	% L
-	%
-
-	% M
-	%
+  
+  
+  % L
+  %
+  
+  % M
+  %
   me-ngu-ra-ngi
   meng-eva-lu-a-si
   me-nge-lo-la
   men-da-lam
   mak-si-mal
-
-	% N
-	%
-
-	% O
-	%
-
-	% P
-	%
+  me-nye-le-sai-kan
+  
+  % N
+  %
+  
+  % O
+  %
+  
+  % P
+  %
   pro-vi-der
-
-	% Q
-	%
-
-	% R
-	%
-
-	% S
+  
+  % Q
+  %
+  
+  % R
+  %
+  
+  % S
   se-la-in
-	%
-
-	% T
-	% 
-
-	% U
-	%
-
-	% V
-	%
-
-	% W
-	%
-
-	% X
-	%
-
-	% Y
-	% 
-
-	% Z
-	%
+  %
+  
+  % T
+  % 
+  
+  % U
+  %
+  
+  % V
+  %
+  
+  % W
+  %
+  
+  % X
+  %
+  
+  % Y
+  % 
+  
+  % Z
+  %
 }
