--- a/src/references.bib
+++ b/src/references.bib
@@ -1,41 +1,33 @@
-@online{googlecontainers,
-  title   = {Containers},
-  author  = {Google Cloud},
-  year    = {2022},
-  url     = {https://cloud.google.com/containers},
-  urldate = {2022-10-22}
-}
-
-@online{vpa2,
-  title   = {Vertical Pod Autoscaler},
-  author  = {AWS},
-  year    = {2022},
-  url     = {https://docs.aws.amazon.com/eks/latest/userguide/vertical-pod-autoscaler.html},
-  urldate = {2022-12-21}
-}
-
-@online{hpa,
-  title   = {Horizontal Pod Autoscaler},
-  author  = {AWS},
-  year    = {2022},
-  url     = {https://docs.aws.amazon.com/eks/latest/userguide/horizontal-pod-autoscaler.html},
-  urldate = {2022-12-21}
-}
-
 @online{pod,
   title   = {Kubernetes Pod},
   author  = {Kubernetes},
-  year    = {2022},
+  year    = {2023},
   url     = {https://kubernetes.io/docs/concepts/workloads/pods/},
-  urldate = {2022-12-21}
+  urldate = {2023-12-01}
 }
 
-@online{clientlibrary,
-  title   = {Kubernetes Client Library},
+@online{service,
+  title   = {Kubernetes Service},
   author  = {Kubernetes},
-  year    = {2022},
-  url     = {https://kubernetes.io/docs/reference/using-api/client-libraries/},
-  urldate = {2022-12-21}
+  year    = {2023},
+  url     = {https://kubernetes.io/docs/concepts/services-networking/service/},
+  urldate = {2023-12-01}
+}
+
+@online{deployment,
+  title   = {Kubernetes Deployment},
+  author  = {Kubernetes},
+  year    = {2023},
+  url     = {https://kubernetes.io/docs/concepts/workloads/controllers/deployment/},
+  urldate = {2023-12-01}
+}
+
+@online{container,
+  title = {Docker container},
+  url = {https://www.docker.com/resources/what-container/},
+  year = {2023},
+  author = {Docker inc.},
+  urldate = {2023-12-01}
 }
 
 @book{database,
@@ -222,3 +214,54 @@
   number={},
   pages={1-6},
   doi={10.1109/IECON49645.2022.9968384}}
+
+@INPROCEEDINGS{kubeedge,
+  author={Xiong, Ying and Sun, Yulin and Xing, Li and Huang, Ying},
+  booktitle={2018 IEEE/ACM Symposium on Edge Computing (SEC)}, 
+  title={Extend Cloud to Edge with KubeEdge}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={373-377},
+  doi={10.1109/SEC.2018.00048}}
+
+@INPROCEEDINGS{helmkubernetes,
+  author={Gokhale, Shivani and Poosarla, Reetika and Tikar, Sanjeevani and Gunjawate, Swapnali and Hajare, Aparna and Deshpande, Shilpa and Gupta, Sourabh and Karve, Kanchan},
+  booktitle={2021 International Conference on Computing, Communication and Green Engineering (CCGE)}, 
+  title={Creating Helm Charts to ease deployment of Enterprise Application and its related Services in Kubernetes}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/CCGE50943.2021.9776450}}
+
+@inproceedings{madakam2015internet,
+  title={Internet of Things (IoT): A Literature Review},
+  author={Madakam, Somayya and Ramaswamy, Radhika and Tripathi, Shubham},
+  journal={Journal of Computer and Communications},
+  volume={3},
+  pages={164-173},
+  year={2015},
+  doi={10.4236/jcc.2015.35021}
+}
+
+@article{gunawan2017prototype,
+  title={Prototype design of smart home system using internet of things},
+  author={Gunawan, Teddy Surya and Yaldi, Intan Rahmithul Husna and Kartiwi, Mira and Ismail, Nanang and Za’bah, Nor Farahidah and Mansor, Hasmah and Nordin, Anis Nurashikin},
+  journal={Indonesian Journal of Electrical Engineering and Computer Science},
+  volume={7},
+  number={1},
+  pages={107--115},
+  year={2017},
+  publisher={Institute of Advanced Engineering and Science}
+}
+
+@article{kadam2015smart,
+  title={Smart home system},
+  author={Kadam, Rohit and Mahamuni, Pranav and Parikh, Yash},
+  journal={International Journal of Innovative Research in Advanced Engineering},
+  volume={2},
+  number={1},
+  pages={81--86},
+  year={2015}
+}
