feat: bab II complete

--- a/src/references.bib
+++ b/src/references.bib
@@ -21,6 +21,13 @@
   url     = {https://kubernetes.io/docs/concepts/workloads/controllers/deployment/},
   urldate = {2023-12-01}
 }
+@online{penelitianterkait1,
+  title   = {Managing 100,000 Edge Nodes on China's Highways Using KubeEdge},
+  author  = {KubeEdge},
+  year    = {2023},
+  url     = {https://kubeedge.io/case-studies/chinahighways/},
+  urldate = {2023-12-03}
+}
 
 @online{container,
   title = {Docker container},
