--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -84,7 +84,7 @@
 \input{chapters/chapter-1}
 \input{chapters/chapter-2}
 % \blankpage
-% \input{chapters/chapter-3}
+\input{chapters/chapter-3}
 % \input{chapters/chapter-4}
 % \input{chapters/chapter-5}
 %---------------------------------------------------------------%
