feat: adding abstract

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -26,7 +26,7 @@
 % "IoT-Enhanced Smart Home Networks Using Service Mesh Architecture"
 % "Integrating Service Mesh in Smart Home IoT Systems"
 
-\title{Integrasi \textit{Service Mesh} dengan \textit{Smart Home IoT Systems}}
+\title{\textit{Smart home system} berbasis \textit{Service Mesh} dengan Kubernetes}
 % \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
 % \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
 \date{}
@@ -34,7 +34,7 @@
   Muhammad Garebaldhie ER Rahman \\
   NIM: 13520029
 }
-\newcommand\tanggalpengesahan{2 Desember 2023}
+\newcommand\tanggalpengesahan{12 Desember 2023}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
