feat: update bab III

--- a/src/references.bib
+++ b/src/references.bib
@@ -87,6 +87,14 @@
   urldate = {2023-06-20}
 }
 
+@online{mqtt,
+  title= {MQTT: The Standard for IoT Messaging},
+  author= {Mqtt},
+  url = {https://mqtt.org/},
+  year = {2023},
+  urldate = {2023-12-15}
+}
+
 @book{appliedpredictivemodel,
   title     = {Applied Predictive Model},
   author    = {Max Kuhn and Kjell Johnson},
@@ -272,3 +280,42 @@
   pages={81--86},
   year={2015}
 }
+
+
+@article{RemoteDeployment,
+	abstract = {Internet of Thing systems deployments are becoming both ubiquitous and business critical in numerous business verticals, both for process automation and data-driven decision-making based on distributed sensors networks. Beneath the simplicity offered by these solutions, we usually find complex, multi-layer architectures&mdash;from hardware sensors up to data analytics systems},
+	article-number = {4393},
+	author = {Radovici, Alexandru and Culic, Ioana and Rosner, Daniel and Oprea, Flavia},
+	doi = {10.3390/s20164393},
+	issn = {1424-8220},
+	journal = {Sensors},
+	number = {16},
+	pubmedid = {32781684},
+	title = {A Model for the Remote Deployment, Update, and Safe Recovery for Commercial Sensor-Based IoT Systems},
+	url = {https://www.mdpi.com/1424-8220/20/16/4393},
+	volume = {20},
+	year = {2020},
+	bdsk-url-1 = {https://www.mdpi.com/1424-8220/20/16/4393},
+	bdsk-url-2 = {https://doi.org/10.3390/s20164393}}
+
+@INPROCEEDINGS{DeviceDiscovery,
+  author={Ccori, Pablo Calcina and De Biase, Laisa Caroline Costa and Zuffo, Marcelo Knorich and da Silva, Flávio Soares Corrêa},
+  booktitle={2016 IEEE International Symposium on Consumer Electronics (ISCE)}, 
+  title={Device discovery strategies for the IoT}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={97-98},
+  doi={10.1109/ISCE.2016.7797388}}
+
+@ARTICLE{IOTSmartCity,
+  author={Zanella, Andrea and Bui, Nicola and Castellani, Angelo and Vangelista, Lorenzo and Zorzi, Michele},
+  journal={IEEE Internet of Things Journal}, 
+  title={Internet of Things for Smart Cities}, 
+  year={2014},
+  volume={1},
+  number={1},
+  pages={22-32},
+  doi={10.1109/JIOT.2014.2306328}}
+
+
