--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -26,7 +26,7 @@
 % "IoT-Enhanced Smart Home Networks Using Service Mesh Architecture"
 % "Integrating Service Mesh in Smart Home IoT Systems"
 
-\title{\textit{Smart home system} berbasis \textit{Service Mesh} dengan Kubernetes}
+\title{\textit{Smart home system} dengan \textit{IoT} berbasis \textit{Service Mesh} menggunakan Kubernetes}
 % \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
 % \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
 \date{}
@@ -34,7 +34,7 @@
   Muhammad Garebaldhie ER Rahman \\
   NIM: 13520029
 }
-\newcommand\tanggalpengesahan{12 Desember 2023}
+\newcommand\tanggalpengesahan{17 Desember 2023}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
@@ -45,9 +45,9 @@
 
 \pagestyle{plain}
 
-\input{chapters/abstract-id}
+% \input{chapters/abstract-id}
 % \input{chapters/abstract-en}
-\input{chapters/forewords}
+% \input{chapters/forewords}
 
 \titleformat*{\section}{\centering\bfseries\Large\MakeUpperCase}
 \titlespacing*{\chapter}{0pt}{0pt}{4pt}
@@ -99,6 +99,6 @@
 % Setting judul anak lampiran
 \titleformat*{\section}{\bfseries}
 
-% \input{chapters/appendix/appendix}
+\input{chapters/appendix/appendix}
 
 \end{document}
