feat: bab II progress

--- a/src/references.bib
+++ b/src/references.bib
@@ -37,6 +37,22 @@
   urldate = {2023-12-01}
 }
 
+@online{microk8s,
+  title = {Micro K8s},
+  url = {https://microk8s.io/docs},
+  year = {2023},
+  author = {Canonical Ltd},
+  urldate = {2023-12-15}
+}
+
+@online{k3s,
+  title = {K3s},
+  url = {https://k3s.io/},
+  year = {2023},
+  author = {K3s},
+  urldate = {2023-12-15}
+}
+
 @book{database,
   title     = {Database System Concepts},
   author    = {Abraham Silberschatz and Henry F. Korth and S. Sudarshan},
@@ -318,4 +334,46 @@
   pages={22-32},
   doi={10.1109/JIOT.2014.2306328}}
 
+@INPROCEEDINGS{IoTSmartHome,
+  author={Malche, Timothy and Maheshwary, Priti},
+  booktitle={2017 International Conference on I-SMAC (IoT in Social, Mobile, Analytics and Cloud) (I-SMAC)}, 
+  title={Internet of Things (IoT) for building smart home system}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={65-70},
+  doi={10.1109/I-SMAC.2017.8058258}}
 
+
+@INPROCEEDINGS{IoTEnabledSmartHomeSystem,
+  author={Sarmah, Roshmi and Bhuyan, Manasjyoti and Bhuyan, Monowar H.},
+  booktitle={2019 IEEE 5th World Forum on Internet of Things (WF-IoT)}, 
+  title={SURE-H: A Secure IoT Enabled Smart Home System}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={59-63},
+  doi={10.1109/WF-IoT.2019.8767229}}
+
+@article{PerancanganPrototypeSmartHome, 
+  title={Perancangan Prototype Smart Home Dengan Konsep Internet of Thing ( IoT) Berbasis Web Server}, 
+  volume={26}, 
+  url={https://jmi-upiyptk.org/ojs/index.php/jmi/article/view/53}, DOI={10.35134/jmi.v26i2.53}, 
+  abstractNote={&amp;lt;p&amp;gt;Seiring dengan perkembangan zaman dan meningkatnya ekonomi masyarakat permintaan akan kebutuhan rumah yang aman dan nyaman kian meningkat, serta penggunaan internet yang tanpa kita sadari hadir pada kehidupan kita sehari hari menjadikan kita sebagai masyarakat yang berada dalam putaran IoE (Internet of Everything) sehingga saya tertarik untuk mengembangkan smart home dengan konsep Internet of Thing sebagai sekala yang lebih kecil dari Internet of Everything Laporan ini adalah hasil dari pembuatan karya prototype smart home dengan konsep internet of thing menggunakan arduino Wemos D1 dan web browser, membahas mengenai cara kerja dari hubungan arduino wemos d1 yang di kontrol melalui website sebagai langkah penerapan internet of thing dengan menggunakan ip public, menggunakan device komputer sebagai perantara dan dibantu dengan. Dengan adanya prototype ini diharapkan para pengembang selanjutnya baik dari akademisi maupun non-akademisi dapat mengetahui dan mempelajari konsep gabungan antara smart home dan internet of thing secara lebih interaktif, walaupun penulis menyadari masih banyak yang harus diperbaiki dan dikembangkan dari prototype yang penulis buat ini&amp;lt;/p&amp;gt;}, 
+  number={2}, 
+  journal={Majalah Ilmiah UPI YPTK}, 
+  author={Hasri Awal}, 
+  year={2019}, 
+  month={Dec.}, 
+  pages={65–79} 
+}
+
+@INPROCEEDINGS{SmartHomeSystemBasedOnIoTTechnologies,
+  author={Jie, Yin and Pei, Ji Yong and Jun, Li and Yun, Guo and Wei, Xu},
+  booktitle={2013 International Conference on Computational and Information Sciences}, 
+  title={Smart Home System Based on IOT Technologies}, 
+  year={2013},
+  volume={},
+  number={},
+  pages={1789-1791},
+  doi={10.1109/ICCIS.2013.468}}
