feat: add new subfig package

--- a/src/config/if-itb-thesis.sty
+++ b/src/config/if-itb-thesis.sty
@@ -26,6 +26,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
+\usepackage{subfig}
 \usepackage{titling}
 \usepackage{booktabs}
 \usepackage{tabularx}
