feat: bab II service discovery

--- a/src/references.bib
+++ b/src/references.bib
@@ -87,6 +87,43 @@
   urldate = {2023-07-13}
 }
 
+@online{micoservicearchitecture,
+  title   = {Microservices architectures},
+  author  = {Chris Richardson},
+  year    = {2023},
+  url     = {https://microservices.io/tags/service%20discovery},
+  urldate = {2023-12-15}
+}
+@online{3rdpartyintegration,
+  title   = {Microservices architectures: 3rd-party-registration},
+  author  = {Chris Richardson},
+  year    = {2023},
+  url     = {https://microservices.io/patterns/3rd-party-registration.html},
+  urldate = {2023-12-15}
+}
+@online{clientsidediscovery,
+  title   = {Microservices architectures: Client Side discovery},
+  author  = {Chris Richardson},
+  year    = {2023},
+  url     = {https://microservices.io/patterns/client-side-discovery.html},
+  urldate = {2023-12-15}
+}
+@online{selfregistration,
+  title   = {Microservices architectures: Self registration},
+  author  = {Chris Richardson},
+  year    = {2023},
+  url     = {https://microservices.io/patterns/self-registration.html},
+  urldate = {2023-12-15}
+}
+
+@online{servicesidediscovery,
+  title   = {Microservices architectures: Service side discovery},
+  author  = {Chris Richardson},
+  year    = {2023},
+  url     = {https://microservices.io/patterns/server-side-discovery.html},
+  urldate = {2023-12-15}
+}
+
 @online{kubeinplaceupdate,
   title   = {Kubernetes 1.27: In-place Resource Resize for Kubernetes Pods (alpha)},
   author  = {Vinay Kulkarni},
@@ -377,3 +414,19 @@
   number={},
   pages={1789-1791},
   doi={10.1109/ICCIS.2013.468}}
+
+@ARTICLE{ServiceDiscovery,
+  author={Zhu, F. and Mutka, M.W. and Ni, L.M.},
+  journal={IEEE Pervasive Computing}, 
+  title={Service discovery in pervasive computing environments}, 
+  year={2005},
+  volume={4},
+  number={4},
+  pages={81-90},
+  doi={10.1109/MPRV.2005.87}}
+
+@misc{klusch2014servicediscovery,
+  title={Service Discovery.},
+  author={Klusch, Matthias},
+  year={2014}
+}
