feat: ganti judul

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -22,19 +22,13 @@
 
 \begin{document}
 
-%Basic configuration
-% "IoT-Enhanced Smart Home Networks Using Service Mesh Architecture"
-% "Integrating Service Mesh in Smart Home IoT Systems"
-
-\title{\textit{Smart home system} dengan \textit{IoT} berbasis \textit{Service Mesh} menggunakan Kubernetes}
-% \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
-% \title{Smart  \textit{Service Mesh} dengan memanfaatkan eBPF}
+\title{\textit{Remote Deployment} pada \textit{IoT} menggunakan Kubernetes}
 \date{}
 \author{
   Muhammad Garebaldhie ER Rahman \\
   NIM: 13520029
 }
-\newcommand\tanggalpengesahan{15 Desember 2023}
+\newcommand\tanggalpengesahan{21 Maret 2024}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
