--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -39,9 +39,9 @@
 
 \pagestyle{plain}
 
-% \input{chapters/abstract-id}
+\input{chapters/abstract-id}
 % \input{chapters/abstract-en}
-% \input{chapters/forewords}
+\input{chapters/forewords}
 
 \titleformat*{\section}{\centering\bfseries\Large\MakeUpperCase}
 \titlespacing*{\chapter}{0pt}{0pt}{4pt}
