--- a/src/references.bib
+++ b/src/references.bib
@@ -430,3 +430,23 @@
   author={Klusch, Matthias},
   year={2014}
 }
+
+@inproceedings{vogler2015leonore,
+  title={LEONORE--large-scale provisioning of resource-constrained IoT deployments},
+  author={V{\"o}gler, Michael and Schleicher, Johannes and Inzinger, Christian and Nastic, Stefan and Sehic, Sanjin and Dustdar, Schahram},
+  booktitle={2015 IEEE Symposium on Service-Oriented System Engineering},
+  pages={78--87},
+  year={2015},
+  organization={IEEE}
+}
+
+@article{hong2019resource,
+  title={Resource management in fog/edge computing: a survey on architectures, infrastructure, and algorithms},
+  author={Hong, Cheol-Ho and Varghese, Blesson},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={52},
+  number={5},
+  pages={1--37},
+  year={2019},
+  publisher={ACM New York, NY, USA}
+}
