--- a/src/references.bib
+++ b/src/references.bib
@@ -450,3 +450,11 @@
   year={2019},
   publisher={ACM New York, NY, USA}
 }
+
+@inproceedings{thuluva2017recipes,
+  title={Recipes for IoT applications},
+  author={Thuluva, Aparna Saisree and Br{\"o}ring, Arne and Medagoda, Ganindu P and Don, Hettige and Anicic, Darko and Seeger, Jan},
+  booktitle={Proceedings of the Seventh International Conference on the Internet of Things},
+  pages={1--8},
+  year={2017}
+}
