feat: progress bab 3

--- a/src/references.bib
+++ b/src/references.bib
@@ -458,3 +458,13 @@
   pages={1--8},
   year={2017}
 }
+
+@article{sotres2017practical,
+  title={Practical lessons from the deployment and management of a smart city internet-of-things infrastructure: The smartsantander testbed case},
+  author={Sotres, Pablo and Santana, Juan Ram{\'o}n and S{\'a}nchez, Luis and Lanza, Jorge and Mu{\~n}oz, Luis},
+  journal={IEEE Access},
+  volume={5},
+  pages={14309--14322},
+  year={2017},
+  publisher={IEEE}
+}
