--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -80,7 +80,8 @@
 % \blankpage
 \input{chapters/chapter-3}
 % \input{chapters/chapter-4}
-% \input{chapters/chapter-5}
+
+\input{chapters/chapter-5}
 %---------------------------------------------------------------%
 
 % Daftar pustaka
