--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -79,7 +79,8 @@
 \input{chapters/chapter-2}
 % \blankpage
 \input{chapters/chapter-3}
-% \input{chapters/chapter-4}
+
+\input{chapters/chapter-4}
 
 \input{chapters/chapter-5}
 %---------------------------------------------------------------%
