--- a/src/yudisium.tex
+++ b/src/yudisium.tex
@@ -26,8 +26,8 @@
 \title{\textit{Automatic Scaling} dengan Kontrol Fleksibel Berdasarkan Model Prediktif Berbasis \textit{Time Series} untuk Efisiensi Sumber Daya Kubernetes pada Pods \textit{Elastic Search}}
 \date{}
 \author{
-    Muhammad Garebaldhie ER Rahman \\
-    NIM: 13520029
+  Muhammad Garebaldhie ER Rahman \\
+  NIM: 13520029
 }
 \newcommand\tanggalpengesahan{15 Desember 2023}
 
@@ -76,16 +76,16 @@
 % % Dafter Bab
 % % Untuk menambahkan daftar bab, buat berkas bab misalnya `chapter-6` di direktori `chapters`, dan masukkan ke sini.
 % %----------------------------------------------------------------%
-% \input{chapters/chapter-1}
-% \input{chapters/chapter-2}
-% % \blankpage
-% \input{chapters/chapter-3}
-% \input{chapters/chapter-4}
-% \input{chapters/chapter-5}
+\input{chapters/chapter-1}
+\input{chapters/chapter-2}
+% \blankpage
+\input{chapters/chapter-3}
+\input{chapters/chapter-4}
+\input{chapters/chapter-5}
 % %---------------------------------------------------------------%
 
 % % Daftar pustaka
-% \printbibliography
+\printbibliography
 
 % % Setting judul lampiran
 % \titlespacing*{\chapter}{0pt}{0pt}{0pt}
@@ -94,6 +94,6 @@
 % % Setting judul anak lampiran
 % \titleformat*{\section}{\bfseries}
 
-% \input{chapters/appendix/appendix}
+\input{chapters/appendix/appendix}
 
 \end{document}
