--- a/src/config/if-itb-thesis.sty
+++ b/src/config/if-itb-thesis.sty
@@ -45,6 +45,7 @@
 \usepackage{relsize}
 \usepackage{xcolor, colortbl}
 \usepackage{setspace}
+\usepackage{listings}
 
 \graphicspath{{resources/}}   % letak direktori penyimpanan gambar
 
