--- a/src/config/hypenation-id.tex
+++ b/src/config/hypenation-id.tex
@@ -91,7 +91,7 @@
   men-da-lam
   mak-si-mal
   me-nye-le-sai-kan
-  
+  me-ngunjungi
   % N
   %
   
@@ -101,6 +101,7 @@
   % P
   %
   pro-vi-der
+  pe-ru-sa-ha-an
   
   % Q
   %
