--- a/src/references.bib
+++ b/src/references.bib
@@ -432,7 +432,7 @@
 }
 
 @inproceedings{vogler2015leonore,
-  title={LEONORE--large-scale provisioning of resource-constrained IoT deployments},
+  title={LEONORE large-scale provisioning of resource-constrained IoT deployments},
   author={V{\"o}gler, Michael and Schleicher, Johannes and Inzinger, Christian and Nastic, Stefan and Sehic, Sanjin and Dustdar, Schahram},
   booktitle={2015 IEEE Symposium on Service-Oriented System Engineering},
   pages={78--87},
