--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -28,7 +28,7 @@
   Muhammad Garebaldhie ER Rahman \\
   NIM: 13520029
 }
-\newcommand\tanggalpengesahan{16 Mei 2024}
+\newcommand\tanggalpengesahan{11 Juni 2024}
 
 \pagenumbering{roman}
 \setcounter{page}{1}
