feat: formatting over

--- a/src/config/if-itb-thesis.sty
+++ b/src/config/if-itb-thesis.sty
@@ -170,3 +170,6 @@
 \renewcommand*{\FancyVerbLineautorefname}{garis}%
 \renewcommand*{\theoremautorefname}{Teorema}%
 \renewcommand*{\pageautorefname}{halaman}%
+
+% Format to ignore underflow hbadness
+\hbadness=99999
