feat: bab 1 complete

--- a/src/references.bib
+++ b/src/references.bib
@@ -468,3 +468,26 @@
   year={2017},
   publisher={IEEE}
 }
+
+@inproceedings{studyovertheair1,
+  author    = {Mónica M. Villegas and Cristian Orellana and Hernán Astudillo},
+  title     = {A Study of Over-the-Air (OTA) Update Systems for CPS and IoT Operating Systems},
+  booktitle = {Proceedings of the European Conference on Software Architecture (ECSA)},
+  year      = {2019},
+  pages     = {4 pages},
+  location  = {Paris}
+}
+
+@article{ElJaouhari2022,
+  title = {Secure firmware Over-The-Air updates for IoT: Survey,  challenges,  and discussions},
+  volume = {18},
+  ISSN = {2542-6605},
+  url = {http://dx.doi.org/10.1016/j.iot.2022.100508},
+  DOI = {10.1016/j.iot.2022.100508},
+  journal = {Internet of Things},
+  publisher = {Elsevier BV},
+  author = {El Jaouhari,  Saad and Bouvet,  Eric},
+  year = {2022},
+  month = may,
+  pages = {100508}
+}
