feat: nambah bab 3

--- a/src/references.bib
+++ b/src/references.bib
@@ -491,3 +491,43 @@
   month = may,
   pages = {100508}
 }
+
+@ARTICLE{wirelessSensorDeployment,
+  author={Deif, Dina S. and Gadallah, Yasser},
+  journal={IEEE Communications Surveys & Tutorials}, 
+  title={Classification of Wireless Sensor Networks Deployment Techniques}, 
+  year={2014},
+  volume={16},
+  number={2},
+  pages={834-855},
+  keywords={Wireless sensor networks;Robot sensing systems;Genetic algorithms;Mathematical model;Sociology;Statistics;Wireless sensor networks;planned deployment;Genetic Algorithm;Artificial Potential Field;virtual forces;Computational Geometry;Particle Swarm Optimization},
+  doi={10.1109/SURV.2013.091213.00018}
+}
+
+@article{khraisat2021critical,
+  title={A critical review of intrusion detection systems in the internet of things: techniques, deployment strategy, validation strategy, attacks, public datasets and challenges},
+  author={Khraisat, Ansam and Alazab, Ammar},
+  journal={Cybersecurity},
+  volume={4},
+  pages={1--27},
+  year={2021},
+  publisher={Springer}
+}
+
+@inproceedings{krishna2019iot,
+  title={IoT Composer: Composition and deployment of IoT applications},
+  author={Krishna, Ajay and Le Pallec, Michel and Mateescu, Radu and Noirie, Ludovic and Sala{\"u}n, Gwen},
+  booktitle={2019 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion)},
+  pages={19--22},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{vogler2015diane,
+  title={DIANE-dynamic IoT application deployment},
+  author={V{\"o}gler, Michael and Schleicher, Johannes M and Inzinger, Christian and Dustdar, Schahram},
+  booktitle={2015 IEEE International Conference on Mobile Services},
+  pages={298--305},
+  year={2015},
+  organization={IEEE}
+}
