feat: progress bab 2

--- a/src/references.bib
+++ b/src/references.bib
@@ -531,3 +531,89 @@
   year={2015},
   organization={IEEE}
 }
+
+@INPROCEEDINGS{softwareDeploymentFuturePast,
+  author={Dearle, Alan},
+  booktitle={Future of Software Engineering (FOSE '07)}, 
+  title={Software Deployment, Past, Present and Future}, 
+  year={2007},
+  volume={},
+  number={},
+  pages={269-284},
+  keywords={Software performance;Assembly;Computer science;Operating systems;Terminology;Packaging;Computer languages;Middleware;Software systems;Hardware},
+  doi={10.1109/FOSE.2007.20}
+  }
+
+  @techreport{softwareDeploymentCarzaniga1998characterization,
+  title={A characterization framework for software deployment technologies},
+  author={Carzaniga, Antonio and Fuggetta, Alfonso and Hall, Richard S and Heimbigner, Dennis and Van Der Hoek, Andr{\'e} and Wolf, Alexander L},
+  year={1998},
+  institution={Technical Report CU-CS-857-98, Dept. of Computer Science, University of Colorado}
+}
+
+@inproceedings{Dias2019,
+  series = {EuroPLoP ’19},
+  title = {Testing and deployment patterns for the internet-of-things},
+  url = {http://dx.doi.org/10.1145/3361149.3361165},
+  DOI = {10.1145/3361149.3361165},
+  booktitle = {Proceedings of the 24th European Conference on Pattern Languages of Programs},
+  publisher = {ACM},
+  author = {Dias,  João Pedro and Ferreira,  Hugo Sereno and Sousa,  Tiago Boldt},
+  year = {2019},
+  month = jul,
+  collection = {EuroPLoP ’19}
+}
+
+@article{ARCANGELI2015198,
+title = {Automatic deployment of distributed software systems: Definitions and state of the art},
+journal = {Journal of Systems and Software},
+volume = {103},
+pages = {198-218},
+year = {2015},
+issn = {0164-1212},
+doi = {https://doi.org/10.1016/j.jss.2015.01.040},
+url = {https://www.sciencedirect.com/science/article/pii/S0164121215000308},
+author = {Jean-Paul Arcangeli and Raja Boujbel and Sébastien Leriche},
+keywords = {Software management and maintenance, Software deployment, Component-based distributed systems},
+abstract = {Deployment of software systems is a complex post-production process that consists in making software available for use and then keeping it operational. It must deal with constraints concerning both the system and the target machine(s), in particular their distribution, heterogeneity and dynamics, and satisfy requirements from different stakeholders. In the context of mobility and openness, deployment must react to the instability of the network of machines (failures, connections, disconnections, variations in the quality of the resources, etc.). Thus, deployment should be an uninterrupted process which also works when software is running and requires adaptiveness in order to continually satisfy the constraints and the requirements. Originally managed “by hand”, software deployment demands an increasing level of automation and autonomy. This article first provides up-to-date terminology and definitions related to software deployment. Then, it proposes an analytical framework and reviews recent research works on automatic deployment with reference to this framework, and synthesizes the results. The review shows that existing solutions are incomplete, and possibly inefficient or unusable, when distribution, heterogeneity, scalability, dynamics and openness are primary concerns. In particular, they barely support dynamic reactions to unforeseeable events. Additionally, abstraction level and expressiveness at design time are rather limited regarding deployment complexity.}
+}
+
+@article{wurster2020essential,
+  title={The essential deployment metamodel: a systematic review of deployment automation technologies},
+  author={Wurster, Michael and Breitenb{\"u}cher, Uwe and Falkenthal, Michael and Krieger, Christoph and Leymann, Frank and Saatkamp, Karoline and Soldani, Jacopo},
+  journal={SICS Software-Intensive Cyber-Physical Systems},
+  volume={35},
+  pages={63--75},
+  year={2020},
+  publisher={Springer}
+}
+
+@inproceedings{Zimmermann2020_SelfContainedDeploymentPackages,
+  author = {Michael Zimmermann and Uwe Breitenb{\"u}cher and Lukas
+  Harzenetter and Frank Leymann and Vladimir Yussupov},
+  title = {{Self-Contained Service Deployment Packages}},
+  booktitle = {Proceedings of the 10th International Conference on Cloud
+  Computing and Services Science (CLOSER 2020)},
+  year = 2020,
+  month = may,
+  pages = {371--381},
+  isbn = {978-989-758-424-4},
+  doi = {10.5220/0009414903710381},
+  publisher = {SciTePress}
+}
+
+@article{deploybenefits,
+  title={The Benefits of Deployment Automation},
+  author={Deploy, Octopus},
+  journal={Octopus Deploy}
+}
+
+@article{merkel2014docker,
+  title={Docker: lightweight linux containers for consistent development and deployment},
+  author={Merkel, Dirk and others},
+  journal={Linux j},
+  volume={239},
+  number={2},
+  pages={2},
+  year={2014}
+}
