feat: progress ajah

--- a/src/references.bib
+++ b/src/references.bib
@@ -514,15 +514,6 @@
   publisher={Springer}
 }
 
-@inproceedings{krishna2019iot,
-  title={IoT Composer: Composition and deployment of IoT applications},
-  author={Krishna, Ajay and Le Pallec, Michel and Mateescu, Radu and Noirie, Ludovic and Sala{\"u}n, Gwen},
-  booktitle={2019 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion)},
-  pages={19--22},
-  year={2019},
-  organization={IEEE}
-}
-
 @inproceedings{vogler2015diane,
   title={DIANE-dynamic IoT application deployment},
   author={V{\"o}gler, Michael and Schleicher, Johannes M and Inzinger, Christian and Dustdar, Schahram},
@@ -531,6 +522,18 @@
   year={2015},
   organization={IEEE}
 }
+
+@inproceedings{Vgler2015,
+  title = {DIANE - Dynamic IoT Application Deployment},
+  url = {http://dx.doi.org/10.1109/MobServ.2015.49},
+  DOI = {10.1109/mobserv.2015.49},
+  booktitle = {2015 IEEE International Conference on Mobile Services},
+  publisher = {IEEE},
+  author = {V\"{o}gler,  Michael and Schleicher,  Johannes M. and Inzinger,  Christian and Dustdar,  Schahram},
+  year = {2015},
+  month = jun 
+}
+
 
 @INPROCEEDINGS{softwareDeploymentFuturePast,
   author={Dearle, Alan},
@@ -616,4 +619,37 @@ abstract = {Deployment of software systems is a complex post-production process 
   number={2},
   pages={2},
   year={2014}
+}
+
+@inproceedings{Nguyen2019,
+  title = {Advances in Deployment and Orchestration Approaches for IoT - A Systematic Review},
+  url = {http://dx.doi.org/10.1109/iciot.2019.00021},
+  DOI = {10.1109/iciot.2019.00021},
+  booktitle = {2019 IEEE International Congress on Internet of Things (ICIOT)},
+  publisher = {IEEE},
+  author = {Nguyen,  Phu and Ferry,  Nicolas and Erdogan,  Gencer and Song,  Hui and Lavirotte,  Stephane and Tigli,  Jean-Yves and Solberg,  Arnor},
+  year = {2019},
+  month = jul 
+}
+
+@inproceedings{Krishna2019,
+  title = {IoT Composer: Composition and Deployment of IoT Applications},
+  url = {http://dx.doi.org/10.1109/ICSE-Companion.2019.00028},
+  DOI = {10.1109/icse-companion.2019.00028},
+  booktitle = {2019 IEEE/ACM 41st International Conference on Software Engineering: Companion Proceedings (ICSE-Companion)},
+  publisher = {IEEE},
+  author = {Krishna,  Ajay and Le Pallec,  Michel and Mateescu,  Radu and Noirie,  Ludovic and Salaun,  Gwen},
+  year = {2019},
+  month = may 
+}
+
+@inproceedings{Jain2017,
+  title = {Cloud to Edge: Distributed Deployment of Process-Aware IoT Applications},
+  url = {http://dx.doi.org/10.1109/IEEE.EDGE.2017.32},
+  DOI = {10.1109/ieee.edge.2017.32},
+  booktitle = {2017 IEEE International Conference on Edge Computing (EDGE)},
+  publisher = {IEEE},
+  author = {Jain,  Rakesh and Tata,  Samir},
+  year = {2017},
+  month = jun 
 }
